removed ids and fixed horizontal scroll

--- a/scss/global/base.scss
+++ b/scss/global/base.scss
@@ -1,10 +1,12 @@
 html {
   font-size: 13px;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 body {
   font-family: Helvetica, sans-serif;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 * {
